TAG: nomenload-6-0-0-?
DATE: 10/01/2015
STAFF: lec
CHANGES:
1) TR2070/12166 : implement curator sanity checking/publishing

TAG: nomenload-6-0-0-6
TAG: nomenload-6-0-0-5
DATE: 09/14/2015
STAFF: sc
CHANGES: Checking into CVS so Lori may look at it. 
While testing TR12109/TR12058 nomenload's discovered some conversion bugs:
1) replaced: db.set_sqlLogFD(diagFile)
   with: db.set_commandLogFile(diagFileName) 
   as db.set_sqlLogFD no longer exists
2) removed: results = db.sql('select _Term_key from VOC_Term_CurationState_View where term = \'Internal\'', 'auto')
   as: it is not being used and the view no longer exists

TAG: nomenload-6-0-0-4
DATE: 08/31/2015
STAFF: lec
CHANGES:
1) TR12083/mrk_marker/_curationstate_key/obsolet

TAG: nomenload-6-0-0-3
TAG: nomenload-6-0-0-2
TAG: nomenload-6-0-0-1
DATE: 07/27/2015
STAFF: lec
CHANGES:
1) TR11750/postgres
- changed to PG_DBUTILS/not tested

TAG: nomenload-5-2-1-1
TAG: nomenload-5-1-5-5
TAG: nomenload-5-1-5-4
TAG: nomenload-5-1-5-3
TAG: nomenload-5-1-5-2
DATE: 04/06/2015
STAFF: lec
CHANGES:
1) TR11750/pick up changes to SP/NOM_transferToMGD()

TAG: nomenload-5-1-5-1
DATE: 12/02/2013
STAFF: dbm
CHANGES:
1) TR11475: shell "-x" cleanup

TAG: nomenload-4-4-1-1
DATE: 03/31/2011
STAFF: lec
CHANGES:
1) fix synTypeKey = 1003 => 1008

TAG: nomenload-4-4-0-?
DATE: 11/17/2010
STAFF: lec
CHANGES:
1) TR10459/IMGT rename

TAG: nomenload-4-4-0-2
TAG: nomenload-4-4-0-1
DATE: 10/22/2010
STAFF: sc
CHANGES:
1) created bin directory and moved .py and .csh scripts there
2) renamed config default files to config.template
3) renamed the specific config files (those already used by an
   adhoc load) to follow the format
4) added updatemkrtype.config.template
5) added ./bin/updateMkrType.py and ./bin/updateMkrType.csh

TAG: nomenload-4-1-2-1
DATE: 10/01/2008
STAFF: dbm
CHANGES: Changed config setting for new loads (TR9159)

TAG: nomenload-4-1-0-1
DATE: 05/30/2008
STAFF: dbm
CHANGES: Merged tr8528 branch to the trunk

TAG: nomenload-tr8528-1